test_regress/t/t_fsmmulti_combo_multi_warn_bad.out
%Warning-FSMMULTI: t/t_fsmmulti_combo_multi_warn_bad.v:30:5: FSM coverage: multiple supported transition candidates found in the same combinational always block. Only the first candidate will be instrumented.
   30 |     case (state_b_q)
      |     ^~~~
                   ... For warning description see https://verilator.org/warn/FSMMULTI?v=latest
                   ... Use "/* verilator lint_off FSMMULTI */" and lint_on around source to disable this message.
%Warning-FSMMULTI: t/t_fsmmulti_combo_multi_warn_bad.v:66:5: FSM coverage: multiple supported transition candidates found for the same FSM in combinational always blocks. Only the first candidate will be instrumented.
   66 |     case (state_q)
      |     ^~~~
%Error: Exiting due to
